Enhance memory store functionality with namespace and read-only file management
- Added support for allowed namespaces and read-only files in settings.
- Implemented memory store operations for listing, reading, writing, and updating memories with validation.
- Updated README and environment configuration for new features.

--- a/env.example
+++ b/env.example
@@ -9,3 +9,12 @@ REDIS_PORT=6379
 REDIS_PASSWORD=your_redis_password_here
 REDIS_DB=0
 
+# Memory Store Configuration
+# Comma-separated list of allowed namespaces (empty = all allowed)
+# Example: ALLOWED_NAMESPACES=programming-style,writing-style,preferences
+ALLOWED_NAMESPACES=
+
+# Comma-separated list of read-only files in format "namespace/key"
+# Example: READ_ONLY_FILES=preferences/core-values,programming-style/company-standards
+READ_ONLY_FILES=
+
