Implement MCP server transport configuration and enhance settings management
- Added transport mode configuration to support 'stdio' and 'streamable-http'.
- Updated server initialization to handle different transport modes.
- Enhanced settings management for allowed namespaces and read-only files with helper methods.
- Revised README and example environment file to reflect new transport settings.

--- a/env.example
+++ b/env.example
@@ -3,6 +3,13 @@ ENVIRONMENT=development
 DEBUG=true
 LOG_LEVEL=INFO
 
+# MCP Server Settings
+# Transport mode: 'stdio' (for Claude Desktop, Cursor) or 'streamable-http' (for HTTP access)
+TRANSPORT=stdio
+# HTTP server settings (only used when TRANSPORT=streamable-http)
+HOST=0.0.0.0
+PORT=8000
+
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
