--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=2.12.4",
+    "langgraph>=0.6.8",
     "langgraph-checkpoint-postgres>=2.0.23",
     "langgraph-checkpoint-redis>=0.1.1",
     "langgraph-store-mongodb>=0.1.0",
+    "mcp[cli]>=1.16.0",
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.1.1",
 ]
