--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,11 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.1.1",
 ]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = ["core", "database"]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
