Refactor memory store to file store and enhance configuration management
- Replaced MemoryStore with FileStore for managing memory configurations.
- Updated settings to include configuration directory and allowed files.
- Modified server and tool functions to work with file-based memory management.
- Enhanced README with detailed instructions on memory configuration using JSON files.
- Removed deprecated memory_store module to streamline the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,6 @@ ENV/
 env.bak/
 venv.bak/
 dev/
-ideas.md
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -206,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Memory configuration files (keep example files only)
+files/*.json
+!files/*.json.example
