--- a/env.example
+++ b/env.example
@@ -17,11 +17,20 @@ REDIS_PASSWORD=your_redis_password_here
 REDIS_DB=0
 
 # Memory Store Configuration
-# Comma-separated list of allowed namespaces (empty = all allowed)
-# Example: ALLOWED_NAMESPACES=programming-style,writing-style,preferences
-ALLOWED_NAMESPACES=
+# Directory containing JSON configuration files (each file defines a memory category)
+CONFIG_DIR=files
 
-# Comma-separated list of read-only files in format "namespace/key"
-# Example: READ_ONLY_FILES=preferences/core-values,programming-style/company-standards
+# Comma-separated list of allowed file names (empty = all allowed)
+# Example: ALLOWED_FILES=programming-style,communication-preferences,writing-style
+ALLOWED_FILES=
+
+# Comma-separated list of read-only files in format "memory_category/file_name"
+# Example: READ_ONLY_FILES=memories/core-values,memories/company-standards
 READ_ONLY_FILES=
+
+# Allow agent to create its own files in a dedicated category (for plans, notes, etc.)
+ENABLE_AGENT_FILES=false
+
+# Category name for agent-created files
+AGENT_FILES_CATEGORY=agent_files
 
