Add multi-backend support for memory store configuration
- Introduced PostgreSQL and MongoDB settings in the environment configuration.
- Updated core settings to include PostgreSQL and MongoDB connection management.
- Refactored database module to support dynamic backend selection.
- Modified FileStore to utilize a unified store connection based on the selected backend.
- Enhanced example environment file to demonstrate new backend options.

--- a/env.example
+++ b/env.example
@@ -10,11 +10,28 @@ TRANSPORT=stdio
 HOST=0.0.0.0
 PORT=8000
 
+# Backend Selection
+# Choose memory store backend: 'redis', 'postgresql', or 'mongodb'
+BACKEND=redis
+
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=your_redis_password_here
 REDIS_DB=0
+
+# PostgreSQL Configuration
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_postgres_password_here
+POSTGRES_DATABASE=langgraph_store
+POSTGRES_SSLMODE=disable
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DATABASE=langgraph_store
+MONGODB_COLLECTION=memory_store
 
 # Memory Store Configuration
 # Directory containing JSON configuration files (each file defines a memory category)
