Update dependencies and configuration for improved compatibility and clarity
- Downgraded fastmcp dependency version from 2.12.4 to 2.12.3 in pyproject.toml.
- Added psycopg-binary and psycopg2-binary dependencies for PostgreSQL support.
- Updated README to replace localhost with placeholders for Redis, PostgreSQL, and MongoDB configurations for better user guidance.
- Adjusted Python version requirement in uv.lock to ensure compatibility with existing environments.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastmcp>=2.12.4",
+    "fastmcp==2.12.3",
     "langgraph>=0.6.8",
     "langgraph-checkpoint-postgres>=2.0.23",
     "langgraph-checkpoint-redis>=0.1.1",
     "langgraph-store-mongodb>=0.1.0",
     "mcp[cli]>=1.16.0",
+    "psycopg-binary>=3.2.11",
+    "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.1.1",
 ]
