Update project configuration and documentation for improved usability
- Added a new script entry point for the MCP server in pyproject.toml.
- Expanded package list in pyproject.toml to include the services module.
- Updated README to reflect changes in command usage from 'python' to 'uv run' for starting the server.
- Enhanced documentation links for better clarity on long-term memory integration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,12 @@ dependencies = [
     "python-dotenv>=1.1.1",
 ]
 
+[project.scripts]
+mcp-langgraph-store = "server:mcp"
+
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["core", "database"]
+packages = ["core", "database", "services"]
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
